--- a/package.json
+++ b/package.json
@@ -1,38 +1,26 @@
 {
+  "name": "official-strapi",
+  "version": "0.1.0",
+  "private": true,
+  "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
     "build": "strapi build",
-    "test": "jest --forceExit --detectOpenHandles",
-    "strapi": "strapi",
+    "commitlint": "commitlint --edit $1",
+    "develop": "strapi develop",
     "prepare": "is-ci || yarn prepare:husky",
     "prepare:husky": "[ ! -d .git ] || { rm -rf .husky; husky install; husky add .husky/commit-msg 'yarn commitlint'; }",
-    "commitlint": "commitlint --edit $1"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/git": "^10.0.1",
-    "husky": "^7.0.4",
-    "is-ci": "^3.0.1",
-    "jest": "^27.5.1",
-    "semantic-release": "^19.0.2",
-    "sqlite3": "^5.0.2",
-    "supertest": "^6.2.2"
+    "start": "strapi start",
+    "strapi": "strapi",
+    "test": "jest --forceExit --detectOpenHandles"
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ]
-  },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      ".tmp",
-      ".cache"
-    ],
-    "testEnvironment": "node"
   },
   "release": {
     "plugins": [
@@ -59,31 +47,44 @@
     ],
     "tagFormat": "${version}"
   },
-  "name": "official-strapi",
-  "private": true,
-  "version": "0.1.0",
-  "description": "A Strapi application",
+  "jest": {
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      ".tmp",
+      ".cache"
+    ]
+  },
   "dependencies": {
-    "@strapi/strapi": "4.19.0",
-    "@strapi/plugin-users-permissions": "4.19.0",
-    "@strapi/plugin-i18n": "4.19.0",
     "@strapi/plugin-cloud": "4.19.0",
+    "@strapi/plugin-i18n": "4.19.0",
+    "@strapi/plugin-users-permissions": "4.19.0",
+    "@strapi/strapi": "4.19.0",
     "better-sqlite3": "8.6.0",
+    "mysql": "2.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
     "styled-components": "5.3.3"
   },
-  "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "07b3d42b-adee-4ded-b211-9210de76044e",
-    "template": "./maxwin-strapi-template"
+  "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "husky": "^7.0.4",
+    "is-ci": "^3.0.1",
+    "jest": "^27.5.1",
+    "semantic-release": "^19.0.2",
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.2.2"
   },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "strapi": {
+    "uuid": "07b3d42b-adee-4ded-b211-9210de76044e",
+    "template": "./maxwin-strapi-template"
+  }
 }
